# kuunyi-scanner

./: .gitignore  LICENSE  README.md  gradle.properties  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kuunyi/scanner/ui/screens/: SettingsScreenPinTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kuunyi/scanner/: MainActivity.kt
app/src/main/java/com/kuunyi/scanner/data/: Event.kt  ScanResult.kt  Screen.kt  TicketPayload.kt
app/src/main/java/com/kuunyi/scanner/network/: ScanApiClient.kt
app/src/main/java/com/kuunyi/scanner/ui/screens/: EventPickerScreen.kt  NavPill.kt  ResultScreen.kt  ScannerScreen.kt  SettingsScreen.kt
app/src/main/java/com/kuunyi/scanner/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/kuunyi/scanner/util/: FeedbackManager.kt  TicketVerifier.kt
app/src/main/java/com/kuunyi/scanner/viewmodel/: ScannerViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/kuunyi/scanner/network/: ScanApiClientTest.kt
app/src/test/java/com/kuunyi/scanner/util/: TicketVerifierTest.kt
app/src/test/java/com/kuunyi/scanner/viewmodel/: ScannerViewModelTest.kt
docs/superpowers/plans/: 2026-07-09-qr-payload-verification.md
docs/superpowers/specs/: 2026-07-09-qr-payload-format-design.md
kuunyi_scanner/: __init__.py  __main__.py  cli.py  scanner.py
tests/: test_scanner.py
